# tools-metabolomics

./: .gitignore  .tt_biocontainer_skip  CONTRIBUTING.md  README.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: tool-migration-template.md
.github/workflows/: ci.yaml  pr.yaml
galaxy/nmr_bucketing/: DrawSpec.R  NmrBucketing_script.R  NmrBucketing_wrapper.R  NmrBucketing_xml.xml
metams/metaMS_runGC/: metams_runGC.xml
tools/Metgem/: .shed.yml  README.rst
tools/OptiLCMS/: .shed.yml  optilcms.R  optilcms.xml
tools/anova/: .shed.yml  README.rst  abims_anova.r  abims_anova.xml
tools/batch_correction/: CHANGELOG.md  batch_correction.xml  batch_correction_3Lfct.R  batch_correction_3Llauncher.R  batch_correction_3Lwrapper.R  batch_correction_all_loess_script.R  batch_correction_all_loess_wrapper.R  determine_bc.xml  macros.xml
tools/batch_dispersion/: .shed.yml  batch_dispersion.xml  convex_hull_analysis.R
tools/biosigner/: .shed.yml  (+5 more)
tools/influx_data_manager/: .shed.yml  README.md  influx_data_manager.xml  pyproject.toml
tools/influx_data_manager/data/isocor2mtf/: Data_galaxy_test.tsv  ouptut.tsv
tools/influx_data_manager/data/physiofit2mtf/A/: config_file.yml  flux_results.tsv  stat_results.tsv
tools/influx_data_manager/influx_si_data_manager/: __main__.py
tools/influx_data_manager/influx_si_data_manager/test_data/: isocor_results.tabular  mapping.txt  summary.csv
tools/influx_data_manager/influx_si_data_manager/utils/: isocor2mtf.py  map_data.py  physiofit2mtf.py
tools/influx_data_manager/test-data/: galaxy_test.csv
(+474 files in other folders)
